avoid generated ANTLR code for javascript parsing